--- a/XslTrans/App.config
+++ b/XslTrans/App.config
@@ -4,4 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <appSettings>
+        <add key="XsltFile" value=""/>
+        <add key="OutPath" value=""/>
+    </appSettings>
 </configuration>
