--- a/XslTrans/App.config
+++ b/XslTrans/App.config
@@ -5,7 +5,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
-        <add key="XsltFile" value=""/>
-        <add key="OutPath" value=""/>
+        <add key="XsltFile" value="gutdf30.xsl"/>
+        <add key="OutPath" value="out\"/>
     </appSettings>
 </configuration>
